--- a/models/hcp/hcpitg_integration/product/__sources_hcpitg_integration__products.yml
+++ b/models/hcp/hcpitg_integration/product/__sources_hcpitg_integration__products.yml
@@ -19,3 +19,4 @@ sources:
             config:
               store_failures: true
               schema: hcpwks_integration
+              severity: error
