--- a/models/thailand/thaitg_integration/district/_sources_thaitg_integration__district.yml
+++ b/models/thailand/thaitg_integration/district/_sources_thaitg_integration__district.yml
@@ -20,6 +20,7 @@ sources:
               config:
                 store_failures: true
                 schema: thawks_integration
+                severity: error
           - test_duplicate:
               group_by_columns: ["code"]
               select_columns: ["code","name"]
@@ -27,6 +28,7 @@ sources:
               config:
                 store_failures: true
                 schema: thawks_integration
+                severity: error
 
     - name: sdl_mds_th_ref_district
       tags: ["th_non_tesco","ingestion"]
@@ -38,6 +40,7 @@ sources:
               config:
                 store_failures: true
                 schema: thawks_integration
+                severity: error
           - test_duplicate:
               group_by_columns: ["code"]
               select_columns: ["code","name"]
@@ -45,6 +48,7 @@ sources:
               config:
                 store_failures: true
                 schema: thawks_integration
+                severity: error
     
 
       
