--- a/models/thailand/thaitg_integration/material/_sources_thaitg_integration__material.yml
+++ b/models/thailand/thaitg_integration/material/_sources_thaitg_integration__material.yml
@@ -19,3 +19,4 @@ sources:
             config:
               store_failures: true
               schema: thawks_integration
+              severity: error
