--- a/models/thailand/thaitg_integration/sub_district/_sources_thaitg_integration__sub_district.yml
+++ b/models/thailand/thaitg_integration/sub_district/_sources_thaitg_integration__sub_district.yml
@@ -19,6 +19,7 @@ sources:
               config:
                 store_failures: true
                 schema: thawks_integration
+                severity: error
           - test_duplicate:
               group_by_columns: ["code"]
               select_columns: ["code","name"]
@@ -26,3 +27,4 @@ sources:
               config:
                 store_failures: true
                 schema: thawks_integration
+                severity: error
