--- a/models/indonesia/idnitg_integration/distributor/_sources_idnitg_integration__distributor.yml
+++ b/models/indonesia/idnitg_integration/distributor/_sources_idnitg_integration__distributor.yml
@@ -18,12 +18,14 @@ sources:
               config:
                 store_failures: true
                 schema: idnwks_integration
+                severity: error
           - test_duplicate__ff:
               group_by_columns: ["dist_group","effective_from","type_dist_id"]
               name: TRATBL_sdl_mds_id_ref_mapping_channel__duplicate_test
               config:
                 store_failures: true
                 schema: idnwks_integration
+                severity: error
     - name: sdl_mds_id_lav_customer_hierarchy
       tags: ["id_mds_itg_load","ingestion"]
       tests:
@@ -33,12 +35,14 @@ sources:
               config:
                 store_failures: true
                 schema: idnwks_integration
+                severity: error
           - test_duplicate__ff:
               group_by_columns: ["customer_id","effective_from"]
               name: TRATBL_sdl_mds_id_lav_customer_hierarchy__duplicate_test
               config:
                 store_failures: true
                 schema: idnwks_integration
+                severity: error
 
     - name: sdl_mds_id_ref_distributor_group
       tags: ["id_mds_itg_load","ingestion"]
@@ -49,12 +53,14 @@ sources:
               config:
                 store_failures: true
                 schema: idnwks_integration
+                severity: error
           - test_duplicate__ff:
               group_by_columns: ["distributor_code"]
               name: TRATBL_sdl_mds_id_ref_distributor_group__duplicate_test
               config:
                 store_failures: true
                 schema: idnwks_integration
+                severity: error
     - name: sdl_mds_id_ref_mapping_product
       tags: ["id_mds_itg_load","ingestion"]
       tests:
@@ -64,12 +70,14 @@ sources:
               config:
                 store_failures: true
                 schema: idnwks_integration
+                severity: error
           - test_duplicate__ff:
               group_by_columns: ["product_key","effective_from"]
               name: TRATBL_sdl_mds_id_ref_mapping_product__duplicate_test
               config:
                 store_failures: true
                 schema: idnwks_integration
+                severity: error
     - name: sdl_mds_id_ref_province
       tags: ["id_mds_itg_load","ingestion"]
       tests:
@@ -79,12 +87,14 @@ sources:
               config:
                 store_failures: true
                 schema: idnwks_integration
+                severity: error
           - test_duplicate__ff:
               group_by_columns: ["prov_id"]
               name: TRATBL_sdl_mds_id_ref_province__duplicate_test
               config:
                 store_failures: true
                 schema: idnwks_integration
+                severity: error
 
     - name: sdl_mds_id_distributor_group_ingest_include
       tags: ["id_mds_itg_load","ingestion"]
@@ -95,12 +105,14 @@ sources:
               config:
                 store_failures: true
                 schema: idnwks_integration
+                severity: error
           - test_duplicate__ff:
               group_by_columns: ["source"]
               name: TRATBL_sdl_mds_id_distributor_group_ingest_include__duplicate_test
               config:
                 store_failures: true
                 schema: idnwks_integration
+                severity: error
 
     - name: sdl_mds_id_ref_salesman
       tags: ["id_mds_itg_load","ingestion"]
@@ -111,12 +123,14 @@ sources:
               config:
                 store_failures: true
                 schema: idnwks_integration
+                severity: error
           - test_duplicate__ff:
               group_by_columns: ["key_field","effective_from"]
               name: TRATBL_sdl_mds_id_ref_salesman__duplicate_test
               config:
                 store_failures: true
                 schema: idnwks_integration
+                severity: error
 
     - name: sdl_mds_id_distributor_customer_update
       tags: ["id_mds_sdl_itg_load_dist_cust_dim","ingestion"]
@@ -127,12 +141,14 @@ sources:
               config:
                 store_failures: true
                 schema: idnwks_integration
+                severity: error
           - test_duplicate__ff:
               group_by_columns: ["effective_to","cust_id","sales_office_id_jnj"]
               name: TRATBL_sdl_mds_id_distributor_customer_update__duplicate_test
               config:
                 store_failures: true
                 schema: idnwks_integration
+                severity: error
 
     - name: sdl_distributor_customer_dim
       tags: ["id_cd_server_data","ingestion"]
