--- a/models/japan/jpnitg_integration/mds/_sources_jpnitg_integration__mds.yml
+++ b/models/japan/jpnitg_integration/mds/_sources_jpnitg_integration__mds.yml
@@ -46,6 +46,7 @@ sources:
             config:
               store_failures: true
               schema: jpnwks_integration
+              severity: error
         - test_duplicate:
                 select_columns: ["code"]
                 group_by_columns: ["code"] 
@@ -53,6 +54,7 @@ sources:
                 config:
                   store_failures: true
                   schema: jpnwks_integration
+                  severity: error
 
       - name: sdl_mds_jp_mt_chn_cstm_rt
         tags: ["j_jp_mds_refresh_etl_framework_sellout","ingestion"]
@@ -64,6 +66,7 @@ sources:
               config:
                 store_failures: true
                 schema: jpnwks_integration
+                severity: error
           - test_duplicate:
                 select_columns: ["chn_cd","cstm_cd","mjr_prod_cd"]
                 group_by_columns: ["chn_cd","cstm_cd","mjr_prod_cd"]
@@ -71,6 +74,7 @@ sources:
                 config:
                   store_failures: true
                   schema: jpnwks_integration
+                  severity: error
         
       - name: sdl_mds_jp_mt_emp
         tags: ["j_jp_mds_refresh_etl_framework_sellout","ingestion"]
@@ -82,6 +86,7 @@ sources:
               config:
                 store_failures: true
                 schema: jpnwks_integration
+                severity: error
           - test_duplicate:
                 select_columns: ["code"]
                 group_by_columns: ["code"]
@@ -89,6 +94,7 @@ sources:
                 config:
                   store_failures: true
                   schema: jpnwks_integration
+                  severity: error
 
       - name: sdl_mds_jp_mt_frnch_cdd
         tags: ["j_jp_mds_refresh_etl_framework_sellout","ingestion"]
@@ -100,6 +106,7 @@ sources:
               config:
                 store_failures: true
                 schema: jpnwks_integration
+                severity: error
           - test_duplicate:
                 select_columns: ["code"]
                 group_by_columns: ["code"]
@@ -107,6 +114,7 @@ sources:
                 config:
                   store_failures: true
                   schema: jpnwks_integration
+                  severity: error
 
       - name: sdl_mds_jp_mt_in_out_conv
         tags: ["j_jp_mds_refresh_etl_framework_sellout","ingestion"]
@@ -118,6 +126,7 @@ sources:
               config:
                 store_failures: true
                 schema: jpnwks_integration
+                severity: error
           - test_duplicate:
                 select_columns: ["sld_to"]
                 group_by_columns: ["sld_to"]
@@ -125,6 +134,7 @@ sources:
                 config:
                   store_failures: true
                   schema: jpnwks_integration
+                  severity: error
 
       - name: sdl_mds_jp_mt_item_cdd
         tags: ["j_jp_mds_refresh_etl_framework_sellout","ingestion"]
@@ -136,6 +146,7 @@ sources:
               config:
                 store_failures: true
                 schema: jpnwks_integration
+                severity: error
           - test_duplicate:
                 select_columns: ["item_cd"]
                 group_by_columns: ["item_cd"]
@@ -143,3 +154,4 @@ sources:
                 config:
                   store_failures: true
                   schema: jpnwks_integration
+                  severity: error
