--- a/models/pacific/pcfitg_integration/sales/_sources_pcfitg_integration__sales.yml
+++ b/models/pacific/pcfitg_integration/sales/_sources_pcfitg_integration__sales.yml
@@ -43,6 +43,7 @@ sources:
               config:
                 store_failures: true
                 schema: pcfwks_integration
+                severity: error
     - name: sdl_px_weekly_sell
     - name: sdl_mds_pacific_ciw_adjustment
       tags: ["anz_mds_sdl_to_edw_load",""]
