--- a/models/philippines/phlitg_integration/mds/_sources_phlitg_integration__mds.yml
+++ b/models/philippines/phlitg_integration/mds/_sources_phlitg_integration__mds.yml
@@ -20,6 +20,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["item_code","year"]
               group_by_columns: ["item_code","year"]
@@ -27,6 +28,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
     - name: sdl_mds_ph_gt_customer
       tags: ["ph_mds_itg_refresh","ingestion"]
       tests:
@@ -37,6 +39,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["code"]
               group_by_columns: ["code"]
@@ -44,6 +47,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
     - name: sdl_mds_ph_ref_pos_primary_sold_to
       tags: ["ph_mds_itg_refresh","ingestion"]
       tests:
@@ -54,6 +58,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["name"]
               group_by_columns: ["name"]
@@ -61,6 +66,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
     - name: sdl_mds_ph_pos_product
       tags: ["ph_mds_itg_refresh","ingestion"]
       tests:
@@ -71,6 +77,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["item_cd","prefix","effective_sales_cycle"]
               group_by_columns: ["item_cd","prefix","effective_sales_cycle"]
@@ -78,6 +85,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
     - name: sdl_mds_ph_ref_parent_customer
       tags: ["ph_mds_itg_refresh","ingestion"]
       tests:
@@ -88,6 +96,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["code"]
               group_by_columns: ["code"]
@@ -95,6 +104,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
     - name: sdl_mds_ph_npi_peg_item
       tags: ["ph_mds_itg_refresh","ingestion"]
       tests:
@@ -105,6 +115,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["peg_itemcode_code","peg_itemcode_name","code","salescycle"]
               group_by_columns: ["code"]
@@ -112,6 +123,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
     - name: sdl_mds_ph_npi_sales_groupings
       tags: ["ph_mds_itg_refresh","ingestion"]
       tests:
@@ -122,6 +134,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["code","name"]
               group_by_columns: ["code"]
@@ -129,6 +142,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
     - name: sdl_mds_ph_targets_by_account_and_skus
       tags: ["ph_mds_itg_refresh","ingestion"]
       tests:
@@ -139,6 +153,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["account_code","sku_code","year","activity","area"]
               group_by_columns: ["account_code","sku_code","year"]
@@ -146,6 +161,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
     - name: sdl_mds_ph_distributor_product
       tags: ["ph_mds_itg_refresh","ingestion"]
       tests:
@@ -156,6 +172,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["itemcode","distcode_code","name"]
               group_by_columns: ["itemcode","distcode_code"]
@@ -163,6 +180,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
 
     - name: sdl_mds_ph_ref_repfranchise
       tags: ["ph_mds_itg_refresh","ingestion"]
@@ -174,6 +192,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["code","name"]
               group_by_columns: ["code"]
@@ -181,6 +200,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
     - name: sdl_mds_ph_lav_customer 
       tags: ["ph_mds_itg_refresh","ingestion"]
       tests:
@@ -191,6 +211,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["code","name"]
               group_by_columns: ["code"]
@@ -198,6 +219,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
     - name: sdl_mds_ph_pos_pricelist
       tags: ["ph_mds_itg_refresh","ingestion"]
       tests:
@@ -208,6 +230,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["product_code_code","yearmo","code","name"]
               group_by_columns: ["product_code_code","yearmo"]
@@ -215,6 +238,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
     - name: sdl_ph_iop_trgt
       tags: ["ph_iop_target","ingestion"]
       tests:
@@ -279,6 +303,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["re_id", "kpi", "channel"]
               group_by_columns: ["re_id", "kpi", "channel","valid_from","valid_to"]
@@ -286,6 +311,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
     - name: sdl_mds_ph_msl_hdr
       tags: ["ph_mds_itg_refresh","ingestion"]
       tests:
@@ -296,6 +322,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["code", "to_salescycle", "fr_salescycle"]
               group_by_columns: ["code", "to_salescycle", "fr_salescycle"]
@@ -303,6 +330,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_format:
               select_columns: ["code", "to_salescycle", "fr_salescycle"]
               where_clause: "not regexp_like (trim(fr_salescycle),'[0-2][0-9][0-9][0-9][0-1][0-9]')"
@@ -311,6 +339,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_format:
               select_columns: ["code", "to_salescycle", "fr_salescycle"]
               where_clause: "not regexp_like (trim(to_salescycle),'[0-2][0-9][0-9][0-9][0-1][0-9]')"
@@ -319,6 +348,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
     - name: sdl_mds_ph_msl_dtls
       tags: ["ph_mds_itg_refresh","ingestion"]
       tests:
@@ -329,6 +359,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["msl_hdr_code_code", "sku_code"]
               group_by_columns: ["msl_hdr_code_code", "sku_code"]
@@ -336,6 +367,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
     - name: sdl_mds_ph_ps_targets
       tags: ["ph_mds_itg_refresh","ingestion"]
       tests:
@@ -346,6 +378,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["kpi", "channel", "RE", "attribute_1", "attribute_2", "value"]
               group_by_columns: ["channel", "RE", "attribute_1", "attribute_2", "value"]
@@ -353,6 +386,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
     - name: sdl_mds_ph_distributor_supervisors
       tags: ["ph_mds_itg_refresh", "ingestion"]
       tests:
@@ -381,6 +415,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["code"]
               group_by_columns: ["code"]
@@ -388,6 +423,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
     - name: sdl_mds_ph_lav_product
       tags: ["ph_mds_itg_refresh","ingestion"]
       tests:
@@ -398,6 +434,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
         - test_null:
             not_null_columns: ["code"]
             select_columns: ["code","name"]
@@ -405,6 +442,7 @@ sources:
             config:
               store_failures: true
               schema: phlwks_integration
+              severity: error
     - name: sdl_mds_ph_pos_customers
       tags: ["ph_mds_itg_refresh","ingestion"]
       tests:
@@ -415,6 +453,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
         - test_null:
             not_null_columns: ["brnch_cd","prefix"]
             select_columns: ["code","brnch_cd","prefix","brnch_nm"]
@@ -422,6 +461,7 @@ sources:
             config:
               store_failures: true
               schema: phlwks_integration
+              severity: error
     - name: sdl_mds_ph_ise_parent
       tags: ["ph_mds_itg_refresh","ingestion"]
     - name: sdl_mds_ph_ise_sos_targets
@@ -440,6 +480,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
         - test_null:
             not_null_columns: ["code"]
             select_columns: ["code","name"]
@@ -447,6 +488,7 @@ sources:
             config:
               store_failures: true
               schema: phlwks_integration
+              severity: error
 
   - name: phledw_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
