--- a/models/philippines/phlitg_integration/survey/_sources_phlitg_integration__survey.yml
+++ b/models/philippines/phlitg_integration/survey/_sources_phlitg_integration__survey.yml
@@ -149,7 +149,7 @@ sources:
                 schema: phlwks_integration
 
     - name: sdl_mds_ph_ref_distributors
-      tags: ["ph_perfectstore","ingestion"]
+      tags: ["ph_mds_itg_refresh","ingestion"]
       tests:
           - test_null:
               select_columns: ["code"]
@@ -158,6 +158,7 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["code"]
               group_by_columns: ["code"]
@@ -165,3 +166,4 @@ sources:
               config:
                 store_failures: true
                 schema: phlwks_integration
+                severity: error
