--- a/models/thailand/thaitg_integration/customer/_sources_thaitg_integration__customer.yml
+++ b/models/thailand/thaitg_integration/customer/_sources_thaitg_integration__customer.yml
@@ -26,6 +26,7 @@ sources:
             config:
               store_failures: true
               schema: thawks_integration
+              severity: error
     - name: sdl_th_dms_chana_customer_dim
       tags: ["th_mbox_files","ingestion"]
       tests:
