--- a/models/thailand/thaitg_integration/gt/_sources_thaitg_integration__gt.yml
+++ b/models/thailand/thaitg_integration/gt/_sources_thaitg_integration__gt.yml
@@ -19,6 +19,7 @@ sources:
             config:
               store_failures: true
               schema: thawks_integration
+              severity: error
         - test_duplicate:
             group_by_columns: ["distributorid","re_code","period"]
             select_columns: ["distributorid","re_code","period"]
@@ -26,6 +27,7 @@ sources:
             config:
               store_failures: true
               schema: thawks_integration
+              severity: error
 
     - name: sdl_mds_th_gt_productive_call_target
       tags: ["th_non_tesco","ingestion"]
@@ -37,6 +39,7 @@ sources:
             config:
               store_failures: true
               schema: thawks_integration
+              severity: error
 
         - test_duplicate:
             group_by_columns: ["saleunit","saleid","month","year"]
@@ -45,6 +48,7 @@ sources:
             config:
               store_failures: true
               schema: thawks_integration
+              severity: error
 
         - test_format:
             where_clause: "SUBSTRING(UPPER(TRIM(SALEID)),1,3) <>UPPER(TRIM(SALEUNIT))"
@@ -54,6 +58,7 @@ sources:
             config:
               store_failures: true
               schema: thawks_integration
+              severity: error
 
         - test_lookup:
                 select_columns: ["year","month","saleunit","saleid"]
@@ -65,6 +70,7 @@ sources:
                 config:
                   store_failures: true
                   schema: thawks_integration
+                  severity: error
 
     - name: sdl_la_gt_visit
       tags: ["laos_file_ingestion","ingestion"]
@@ -344,6 +350,7 @@ sources:
               config:
                 store_failures: true
                 schema: thawks_integration
+                severity: error
         - test_duplicate:
             group_by_columns: ["year","kpi_code","kpi_desc","re_code"]
             select_columns: ["year","kpi_code","kpi_desc"]
@@ -352,6 +359,7 @@ sources:
             config:
               store_failures: true
               schema: thawks_integration
+              severity: error
         - test_lookup:
             select_columns: ["year","kpi_code","kpi_desc"]
             column: "year" 
@@ -362,6 +370,7 @@ sources:
             config:
               store_failures: true
               schema: thawks_integration
+              severity: error
 
     - name: sdl_mym_gt_sales_report_fact
       tags: ["myanmar_file_ingestion","ingestion"]
