--- a/models/thailand/thaitg_integration/inventory/_sources_thaitg_integration__inventory.yml
+++ b/models/thailand/thaitg_integration/inventory/_sources_thaitg_integration__inventory.yml
@@ -19,6 +19,7 @@ sources:
               config:
                 store_failures: true
                 schema: thawks_integration
+                severity: error
     - name: sdl_th_dms_inventory_fact
       tags: ["th_mbox_files","ingestion"]
       tests: 
