--- a/models/thailand/thaitg_integration/perfect_store/_sources_thaitg_integration__perfect_store.yml
+++ b/models/thailand/thaitg_integration/perfect_store/_sources_thaitg_integration__perfect_store.yml
@@ -19,6 +19,7 @@ sources:
               config:
                 store_failures: true
                 schema: thawks_integration
+                severity: error
           - test_duplicate:
               group_by_columns: ["re","kpi","channel"]
               select_columns: ["re","kpi","channel"]
@@ -26,6 +27,7 @@ sources:
               config:
                 store_failures: true
                 schema: thawks_integration
+                severity: error
 
     - name: sdl_mds_th_ps_store
       tags: ["th_non_tesco","ingestion"]
@@ -40,6 +42,7 @@ sources:
             config:
               store_failures: true
               schema: thawks_integration
+              severity: error
         - test_duplicate:
             group_by_columns: ["kpi", "channel","re","attribute_1","attribute_2"]
             select_columns: ["kpi", "channel","re","attribute_1","attribute_2","value"]
@@ -47,6 +50,7 @@ sources:
             config:
               store_failures: true
               schema: thawks_integration
+              severity: error
 
     - name: sdl_jnj_mer_cop
       tags: ["j_th_perfect_store_transaction","ingestion"]
