--- a/models/asp_regional/aspitg_integration/_sources_aspitg_integration__test.yml
+++ b/models/asp_regional/aspitg_integration/_sources_aspitg_integration__test.yml
@@ -3,7 +3,7 @@ version: 2
 sources:
   - name: aspwks_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
-    schema: sshukl02_workspace
+    schema: aspwks_integration
     quoting:
       database: false
       schema: false
@@ -42,7 +42,7 @@ sources:
 
   - name: ntawks_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
-    schema: sshukl02_workspace
+    schema: ntawks_integration
     quoting:
       database: false
       schema: false
@@ -74,7 +74,7 @@ sources:
 
   - name: thawks_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
-    schema: sshukl02_workspace
+    schema: thawks_integration
     quoting:
       database: false
       schema: false
