--- a/models/philippines/phlitg_integration/rose_pharma/_sources_phlitg_integration__rose_pharma.yml
+++ b/models/philippines/phlitg_integration/rose_pharma/_sources_phlitg_integration__rose_pharma.yml
@@ -11,8 +11,8 @@ sources:
         tags: ["ph_rks_rose_pharma","ingestion"]
       - name : sdl_pos_rks_rose_pharma_consumer  
 
-      - name : sdl_rosepharmacy_customer_mapping 
-      - name : sdl_rosepharmacy_product_mapping
+      - name : sdl_mds_ph_rka_customers 
+      - name : sdl_mds_ph_pos_product
 
   - name: phlitg_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
