--- a/models/philippines/phlitg_integration/rose_pharma/_sources_phlitg_integration__rose_pharma.yml
+++ b/models/philippines/phlitg_integration/rose_pharma/_sources_phlitg_integration__rose_pharma.yml
@@ -12,7 +12,7 @@ sources:
       - name : sdl_pos_rks_rose_pharma_consumer  
 
       - name : sdl_mds_ph_rka_customers 
-      - name : sdl_mds_ph_pos_product
+     ## - name : sdl_mds_ph_pos_product
 
   - name: phlitg_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
